--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   speech_to_text: ^7.0.0
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
